fix(share) Overlapping div on the share block

--- a/gdpr/static/css/main.scss
+++ b/gdpr/static/css/main.scss
@@ -416,7 +416,7 @@ h1.title__container {
   border: solid 0 #e7e7e7;
 
   .recitals__header__content {
-    padding: 33px;
+    padding: 33px 70px 33px 33px;
     display: flex;
     flex-direction: row;
     align-items: center;
